# django-webpack-app

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .gitignore  docker-compose.yml
{{cookiecutter.project_name}}/core/: .env.example  .gitignore  Makefile  manage.py  package.json  pyproject.toml  setup.cfg  webpack.config.js
{{cookiecutter.project_name}}/core/deployment/: gunicorn_conf.py  install.sh  run.sh
{{cookiecutter.project_name}}/core/deployment/docker/: Dockerfile.server
{{cookiecutter.project_name}}/core/server/: app.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/core/server/api/: views.py
{{cookiecutter.project_name}}/core/server/conf/: settings.py
{{cookiecutter.project_name}}/core/server/models/: __init__.py
{{cookiecutter.project_name}}/nginx/: Dockerfile  nginx.conf
{{cookiecutter.project_name}}/nginx/conf/: gzip.inc  proxy.inc  proxy_buffering.inc  server.inc
